[package]
name = "rsstable"
version = "0.1.0"
authors = ["petitviolet <violethero0820@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
log = { version = "0.4", features = [ "std" ] }

[dev-dependencies]
criterion = "0.3"
simple_logger = "1.9"

[[bench]]
name = "sst_bench"
harness = false
